# ethnicolr

./: .gitignore  .travis.yml  Citation.cff  LICENSE  MANIFEST.in  README.rst  TODO  _dynamic_deps.py  _setup_hooks.py  anaconda-project.yml  appveyor.yml  package.json  pyproject.toml  readthedocs.yml  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml  test.yml
docs/: Makefile  make.bat
docs/source/: conf.py  ethnicolr.rst  index.rst
ethnicolr/: __init__.py  census_ln.py  ethnicolr_class.py  names.csv  pred_census_ln.py  pred_fl_reg_ln.py  pred_fl_reg_ln_cn_int.py  pred_fl_reg_ln_five_cat.py  pred_fl_reg_name.py  pred_fl_reg_name_five_cat.py  pred_nc_reg_name.py  pred_wiki_ln.py  pred_wiki_name.py  utils.py
ethnicolr/data/: input-with-header.csv  input-without-header.csv
ethnicolr/data/census/: census.R  readme.md
ethnicolr/data/census/hispanic_ln/: 26 Appendix E Census List of Spanish Surnames.csv  census_hispanic_ln.csv  hispanic_ln.ipynb
ethnicolr/data/fl_voter_reg/: README.md  fl_voter_name_race.ipynb
ethnicolr/data/nc_voter_reg/: README.md  nc_voter_name_race_ethic.ipynb
ethnicolr/data/wiki/: readme.md  wikilabels-name-race.py
ethnicolr/examples/: ethnicolr_app_contrib2000.ipynb  ethnicolr_app_contrib2010.ipynb  ethnicolr_app_contrib20xx-census_ln.ipynb  ethnicolr_app_contrib20xx-fl_reg.ipynb  ethnicolr_app_contrib20xx.ipynb
ethnicolr/models/: README.md  ethnicolr_keras_lstm_census2000_ln.ipynb  ethnicolr_keras_lstm_census2010_ln.ipynb  ethnicolr_keras_lstm_fl_voter_ln.ipynb  ethnicolr_keras_lstm_fl_voter_ln_5classes_100k.ipynb  ethnicolr_keras_lstm_fl_voter_ln_conf_int.ipynb  ethnicolr_keras_lstm_fl_voter_ln_five_cat.ipynb  ethnicolr_keras_lstm_fl_voter_ln_five_cat_2022.ipynb  ethnicolr_keras_lstm_fl_voter_name.ipynb  ethnicolr_keras_lstm_fl_voter_name_five_cat.ipynb  ethnicolr_keras_lstm_fl_voter_name_five_cat_2022.ipynb  ethnicolr_keras_lstm_nc_12_cat_model.ipynb  ethnicolr_keras_lstm_nc_race_code.ipynb  ethnicolr_keras_lstm_nc_voter_name_lstm_hispanic.ipynb  ethnicolr_keras_lstm_wiki_ln.ipynb  ethnicolr_keras_lstm_wiki_name.ipynb
ethnicolr/models/census/lstm/: census2000_ln_lstm.h5  census2000_ln_vocab.csv  census2000_race.csv  census2010_ln_lstm.h5  census2010_ln_vocab.csv
ethnicolr/models/fl_voter_reg/lstm/: fl_all_fullname_lstm_5_cat.h5  fl_all_fullname_lstm_5_cat_2022.h5  fl_all_fullname_vocab_5_cat.csv  fl_all_fullname_vocab_5_cat_2022.csv  fl_all_ln_lstm.h5  fl_all_ln_lstm_5_cat.h5  fl_all_ln_lstm_5_cat_2022.h5  fl_all_ln_lstm_uncrtn.h5  fl_all_ln_vocab.csv  fl_all_ln_vocab_5_cat.csv  fl_all_ln_vocab_5_cat_2022.csv  fl_all_name_lstm.h5  fl_all_name_lstm_uncrtn.h5  fl_all_name_vocab.csv  fl_name_five_cat_race.csv  fl_name_race.csv  fl_race_five_cat.csv
ethnicolr/models/nc_voter_reg/lstm/: nc_name_hispanic.csv  nc_name_race.csv  nc_name_race_only.csv  nc_race.csv  nc_voter_name_race_vocab.csv  nc_voter_name_race_vocab_oversample.csv  nc_voter_name_vocab.csv  nc_voter_name_vocab_oversample.csv
ethnicolr/models/wiki/lstm/: wiki_ln_lstm.h5  wiki_ln_vocab.csv  wiki_name_lstm.h5  wiki_name_race.csv  wiki_name_vocab.csv
ethnicolr/tests/: __init__.py  test_010_census_ln.py  test_020_pred_census_ln.py  test_030_pred_wiki.py  test_040_pred_fl.py  test_050_pred_nc.py
recipe/: meta.yaml
streamlit/: requirements.txt  streamlit_app.py
